# todo-list-backend

./: .env  README.md  alembic.ini  pyproject.toml
src/alembic/: env.py
src/alembic/versions/: 20250918211838_57f94287c28b_create_tables_user_token_todo.py  20250919125548_f279c861e6f0_remove_col_table_tokens.py
src/app/: main.py
src/app/adapters/api/: deps.py  exception_handlers.py  fastapi_app.py  schemas.py
src/app/adapters/api/v1/: endpoints.py
src/app/adapters/api/v1/views/: auth.py  todo.py
src/app/containers/: container.py  todo.py  token.py  user.py
src/app/core/: config.py  db.py
src/app/core/excetions/: enums.py  errors.py
src/app/domain/models/: __init__.py  base.py  todo.py  token.py  user.py
src/app/domain/repositories/: base.py  todo.py  token.py  user.py
src/app/domain/schemas/: auth.py  base.py  todo.py  token.py  user.py
src/app/domain/services/: todo.py  token.py  user.py
src/app/security/: enum.py  password.py  token.py
