[tool.poetry]
name = "todo-list-backend"
version = "0.1.0"
description = ""
authors = ["dbobrovreal <dbobrovreal@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { extras = ["all"], version = "^0.116.2" }
sqlalchemy = "^2.0.43"
alembic = "^1.16.5"
authx = "^1.4.3"
dependency-injector = "^4.48.1"
asyncpg = "^0.30.0"
pydantic-settings = "^2.10.1"
authlib = "^1.6.4"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-multipart = "^0.0.20"
black = "^25.1.0"
isort = "^6.0.1"
ruff = "^0.13.0"
bcrypt = "3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = false
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120
force_sort_within_sections = true
known_first_party = ["app"]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["alembic/versions"]


[tool.ruff.lint]
select = ["E", "F", "UP", "B", "I", "N", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/alembic/*" = ["E402", "F401", "F403"]
"src/app/adapters/api/v1/views/auth.py" = ["B008"]
"src/app/adapters/api/deps.py" = ["B008"]
"src/app/adapters/api/v1/views/*.py" = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-sort-within-sections = true
combine-as-imports = true
